--- a/Python/Python Study Notes/02. Basic.md
+++ b/Python/Python Study Notes/02. Basic.md
@@ -459,7 +459,7 @@ each object is either true or false, as follows:
 
 - **Other objects are false if empty, and true otherwise**.
 
-examples of true and false values of objects in Python.
+**examples of true and false values of objects in Python:**
 
 ```
 Example object truth values
@@ -467,14 +467,17 @@ Example object truth values
 Object		Value
 
 "spam" 		True
-"" 			False
+"" 			False	# any empty sequence is False, for example, '', (), [].
 [1, 2] 		True
 [] 			False
 {'a': 1} 	True
-{} 			False
+{} 			False	# any empty mapping is False, for example, {}.
 1 			True
-0.0 		False
+0.0 		False	# zero of any numeric type is False, for example, 0, 0.0, 0j.
 None		False
+False		False
+
+instances of user-defined classes, if the class defines a __bool__() or __len__() method, when that method returns the integer zero or bool value False. is False
 ```
 
 
@@ -490,6 +493,8 @@ Python also provides a special object called **None, which is always considered 
 
 
 - it is also the default return value of functions that don’t exit by running into a return statement with a result value.
+
+
 
 
 
@@ -512,6 +517,293 @@ True
 >>> bool({}) 
 False
 ```
+
+
+
+### Boolean Operations — [`and`](https://docs.python.org/3/reference/expressions.html#and), [`or`](https://docs.python.org/3/reference/expressions.html#or), [`not`](https://docs.python.org/3/reference/expressions.html#not)
+
+These are the Boolean operations, ordered by ascending priority:
+
+| Operation | Result                                   | Notes |
+| --------- | ---------------------------------------- | ----- |
+| `x or y`  | if *x* is false, then *y*, else *x*      | (1)   |
+| `x and y` | if *x* is false, then *x*, else *y*      | (2)   |
+| `not x`   | if *x* is false, then `True`, else `False` | (3)   |
+
+Notes:
+
+1. This is a short-circuit operator, so it only evaluates the second argument if the first one is false.
+2. This is a short-circuit operator, so it only evaluates the second argument if the first one is true.
+3. `not` has a lower priority than non-Boolean operators, so `not a == b` is interpreted as `not (a == b)`, and `a == not b` is a syntax error.
+
+
+
+### Comparisons
+
+There are eight comparison operations in Python. They all have the same priority (which is higher than that of the Boolean operations). Comparisons can be chained arbitrarily; for example, `x < y <= z` is equivalent to `x < y and y <= z`, except that *y* is evaluated only once (but in both cases *z* is not evaluated at all when `x < y` is found to be false).
+
+This table summarizes the comparison operations:
+
+| Operation | Meaning                 |
+| --------- | ----------------------- |
+| `<`       | strictly less than      |
+| `<=`      | less than or equal      |
+| `>`       | strictly greater than   |
+| `>=`      | greater than or equal   |
+| `==`      | equal                   |
+| `!=`      | not equal               |
+| `is`      | object identity         |
+| `is not`  | negated object identity |
+
+Objects of different types, except different numeric types, never compare equal. Furthermore, some types (for example, function objects) support only a degenerate notion of comparison where any two objects of that type are unequal. The `<`, `<=`, `>`and `>=` operators will raise a [`TypeError`](https://docs.python.org/3/library/exceptions.html#TypeError) exception when comparing a complex number with another built-in numeric type, when the objects are of different types that cannot be compared, or in other cases where there is no defined ordering.
+
+
+
+## Built-in Types
+
+
+
+### Numeric Types — [`int`](https://docs.python.org/3/library/functions.html#int), [`float`](https://docs.python.org/3/library/functions.html#float), [`complex`](https://docs.python.org/3/library/functions.html#complex)
+
+All numeric types (except complex) support the following operations, sorted by ascending priority (all numeric operations have a higher priority than comparison operations):
+
+| Operation         | Result                                   | Notes  | Full documentation                       |
+| ----------------- | ---------------------------------------- | ------ | ---------------------------------------- |
+| `x + y`           | sum of *x* and *y*                       |        |                                          |
+| `x - y`           | difference of *x* and *y*                |        |                                          |
+| `x * y`           | product of *x* and *y*                   |        |                                          |
+| `x / y`           | quotient of *x* and *y*                  |        |                                          |
+| `x // y`          | floored quotient of *x* and *y*          | (1)    |                                          |
+| `x % y`           | remainder of `x / y`                     | (2)    |                                          |
+| `-x`              | *x* negated                              |        |                                          |
+| `+x`              | *x* unchanged                            |        |                                          |
+| `abs(x)`          | absolute value or magnitude of *x*       |        | [`abs()`](https://docs.python.org/3/library/functions.html#abs) |
+| `int(x)`          | *x* converted to integer                 | (3)(6) | [`int()`](https://docs.python.org/3/library/functions.html#int) |
+| `float(x)`        | *x* converted to floating point          | (4)(6) | [`float()`](https://docs.python.org/3/library/functions.html#float) |
+| `complex(re, im)` | a complex number with real part *re*, imaginary part *im*. *im* defaults to zero. | (6)    | [`complex()`](https://docs.python.org/3/library/functions.html#complex) |
+| `c.conjugate()`   | conjugate of the complex number *c*      |        |                                          |
+| `divmod(x, y)`    | the pair `(x // y, x % y)`               | (2)    | [`divmod()`](https://docs.python.org/3/library/functions.html#divmod) |
+| `pow(x, y)`       | *x* to the power *y*                     | (5)    | [`pow()`](https://docs.python.org/3/library/functions.html#pow) |
+| `x ** y`          | *x* to the power *y*                     | (5)    |                                          |
+
+Notes:
+
+1. Also referred to as integer division. The resultant value is a whole integer, though the result’s type is not necessarily int. The result is always rounded towards minus infinity: `1//2` is `0`, `(-1)//2` is `-1`, `1//(-2)` is `-1`, and `(-1)//(-2)` is `0`.
+
+2. Not for complex numbers. Instead convert to floats using [`abs()`](https://docs.python.org/3/library/functions.html#abs) if appropriate.
+
+3. Conversion from floating point to integer may round or truncate as in C; see functions [`math.floor()`](https://docs.python.org/3/library/math.html#math.floor) and [`math.ceil()`](https://docs.python.org/3/library/math.html#math.ceil)for well-defined conversions.
+
+4. float also accepts the strings “nan” and “inf” with an optional prefix “+” or “-” for Not a Number (NaN) and positive or negative infinity.
+
+5. Python defines `pow(0, 0)` and `0 ** 0` to be `1`, as is common for programming languages.
+
+6. The numeric literals accepted include the digits `0` to `9` or any Unicode equivalent (code points with the `Nd` property).
+
+   See [http://www.unicode.org/Public/8.0.0/ucd/extracted/DerivedNumericType.txt](http://www.unicode.org/Public/8.0.0/ucd/extracted/DerivedNumericType.txt) for a complete list of code points with the `Nd` property.
+
+All [`numbers.Real`](https://docs.python.org/3/library/numbers.html#numbers.Real) types ([`int`](https://docs.python.org/3/library/functions.html#int) and [`float`](https://docs.python.org/3/library/functions.html#float)) also include the following operations:
+
+| Operation        | Result                                   |
+| ---------------- | ---------------------------------------- |
+| `math.trunc(x)`  | *x* truncated to `Integral`              |
+| `round(x[, n\])` | *x* rounded to *n* digits, rounding half to even. If *n* is omitted, it defaults to 0. |
+| `math.floor(x)`  | the greatest `Integral` <= *x*           |
+| `math.ceil(x)`   | the least `Integral` >= *x*              |
+
+For additional numeric operations see the `math` and `cmath` modules.
+
+
+
+#### Bitwise Operations on Integer Types
+
+Bitwise operations only make sense for integers. Negative numbers are treated as their 2’s complement value (this assumes that there are enough bits so that no overflow occurs during the operation).
+
+The priorities of the binary bitwise operations are all lower than the numeric operations and higher than the comparisons; the unary operation `~` has the same priority as the other unary numeric operations (`+` and `-`).
+
+This table lists the bitwise operations sorted in ascending priority:
+
+| Operation | Result                                | Notes  |
+| --------- | ------------------------------------- | ------ |
+| `x | y`   | bitwise *or* of *x* and *y*           |        |
+| `x ^ y`   | bitwise *exclusive or* of *x* and *y* |        |
+| `x & y`   | bitwise *and* of *x* and *y*          |        |
+| `x << n`  | *x* shifted left by *n* bits          | (1)(2) |
+| `x >> n`  | *x* shifted right by *n* bits         | (1)(3) |
+| `~x`      | the bits of *x* inverted              |        |
+
+Notes:
+
+1. Negative shift counts are illegal and cause a [`ValueError`](https://docs.python.org/3/library/exceptions.html#ValueError) to be raised.
+2. A left shift by *n* bits is equivalent to multiplication by `pow(2, n)` without overflow check.
+3. A right shift by *n* bits is equivalent to division by `pow(2, n)` without overflow check.
+
+
+
+### Iterator Types
+
+Python supports a concept of iteration over containers. This is implemented using two distinct methods; these are used to allow user-defined classes to support iteration. Sequences, described below in more detail, always support the iteration methods.
+
+One method needs to be defined for container objects to provide iteration support:
+
+- `container.``__iter__`()
+
+  Return an iterator object. The object is required to support the iterator protocol described below. If a container supports different types of iteration, additional methods can be provided to specifically request iterators for those iteration types. (An example of an object supporting multiple forms of iteration would be a tree structure which supports both breadth-first and depth-first traversal.) This method corresponds to the [`tp_iter`](https://docs.python.org/3/c-api/typeobj.html#c.PyTypeObject.tp_iter) slot of the type structure for Python objects in the Python/C API.
+
+The iterator objects themselves are required to support the following two methods, which together form the *iterator protocol*:
+
+- `iterator.``__iter__`()
+
+  Return the iterator object itself. This is required to allow both containers and iterators to be used with the [`for`](https://docs.python.org/3/reference/compound_stmts.html#for) and [`in`](https://docs.python.org/3/reference/expressions.html#in)statements. This method corresponds to the [`tp_iter`](https://docs.python.org/3/c-api/typeobj.html#c.PyTypeObject.tp_iter) slot of the type structure for Python objects in the Python/C API.
+
+
+- `iterator.``__next__`()
+
+  Return the next item from the container. If there are no further items, raise the [`StopIteration`](https://docs.python.org/3/library/exceptions.html#StopIteration) exception. This method corresponds to the [`tp_iternext`](https://docs.python.org/3/c-api/typeobj.html#c.PyTypeObject.tp_iternext) slot of the type structure for Python objects in the Python/C API.
+
+Python defines several iterator objects to support iteration over general and specific sequence types, dictionaries, and other more specialized forms. The specific types are not important beyond their implementation of the iterator protocol.
+
+Once an iterator’s [`__next__()`](https://docs.python.org/3/library/stdtypes.html#iterator.__next__) method raises [`StopIteration`](https://docs.python.org/3/library/exceptions.html#StopIteration), it must continue to do so on subsequent calls. Implementations that do not obey this property are deemed broken.
+
+
+
+### Generator Types
+
+Python’s [generator](https://docs.python.org/3/glossary.html#term-generator)s provide a convenient way to implement the iterator protocol. If a container object’s [`__iter__()`](https://docs.python.org/3/reference/datamodel.html#object.__iter__) method is implemented as a generator, it will automatically return an iterator object (technically, a generator object) supplying the [`__iter__()`](https://docs.python.org/3/reference/datamodel.html#object.__iter__) and [`__next__()`](https://docs.python.org/3/reference/expressions.html#generator.__next__) methods. More information about generators can be found in [the documentation for the yield expression](https://docs.python.org/3/reference/expressions.html#yieldexpr).
+
+
+
+### Sequence Types — [`list`](https://docs.python.org/3/library/stdtypes.html#list), [`tuple`](https://docs.python.org/3/library/stdtypes.html#tuple), [`range`](https://docs.python.org/3/library/stdtypes.html#range)
+
+There are three basic sequence types: lists, tuples, and range objects. Additional sequence types tailored for processing of[binary data](https://docs.python.org/3/library/stdtypes.html#binaryseq) and [text strings](https://docs.python.org/3/library/stdtypes.html#textseq) are described in dedicated sections.
+
+
+
+#### Common Sequence Operations
+
+The operations in the following table are supported by most sequence types, both mutable and immutable. The [`collections.abc.Sequence`](https://docs.python.org/3/library/collections.abc.html#collections.abc.Sequence) ABC is provided to make it easier to correctly implement these operations on custom sequence types.
+
+This table lists the sequence operations sorted in ascending priority. In the table, *s* and *t* are sequences of the same type, *n*, *i*, *j* and *k* are integers and *x* is an arbitrary object that meets any type and value restrictions imposed by *s*.
+
+The `in` and `not in` operations have the same priorities as the comparison operations. The `+` (concatenation) and `*` (repetition) operations have the same priority as the corresponding numeric operations. [[3\]](https://docs.python.org/3/library/stdtypes.html#id14)
+
+| Operation              | Result                                   | Notes  |
+| ---------------------- | ---------------------------------------- | ------ |
+| `x in s`               | `True` if an item of *s* is equal to *x*, else `False` | (1)    |
+| `x not in s`           | `False` if an item of *s* is equal to *x*, else `True` | (1)    |
+| `s + t`                | the concatenation of *s* and *t*         | (6)(7) |
+| `s * n` or `n * s`     | equivalent to adding *s* to itself *n* times | (2)(7) |
+| `s[i]`                 | *i*th item of *s*, origin 0              | (3)    |
+| `s[i:j]`               | slice of *s* from *i* to *j*             | (3)(4) |
+| `s[i:j:k]`             | slice of *s* from *i* to *j* with step *k* | (3)(5) |
+| `len(s)`               | length of *s*                            |        |
+| `min(s)`               | smallest item of *s*                     |        |
+| `max(s)`               | largest item of *s*                      |        |
+| `s.index(x[, i[, j]])` | index of the first occurrence of *x* in *s* (at or after index *i* and before index *j*) | (8)    |
+| `s.count(x)`           | total number of occurrences of *x* in *s* |        |
+
+Sequences of the same type also support comparisons. In particular, tuples and lists are compared lexicographically by comparing corresponding elements. This means that to compare equal, every element must compare equal and the two sequences must be of the same type and have the same length. (For full details see [Comparisons](https://docs.python.org/3/reference/expressions.html#comparisons) in the language reference.)
+
+Notes:
+
+1. While the `in` and `not in` operations are used only for simple containment testing in the general case, some specialised sequences (such as [`str`](https://docs.python.org/3/library/stdtypes.html#str), [`bytes`](https://docs.python.org/3/library/functions.html#bytes) and [`bytearray`](https://docs.python.org/3/library/functions.html#bytearray)) also use them for subsequence testing:
+
+   ```
+   >>> "gg" in "eggs"
+   True
+   ```
+
+2. Values of *n* less than `0` are treated as `0` (which yields an empty sequence of the same type as *s*). Note that items in the sequence *s* are not copied; they are referenced multiple times. This often haunts new Python programmers; consider:
+
+   ```
+   >>> lists = [[]] * 3
+   >>> lists
+   [[], [], []]
+   >>> lists[0].append(3)
+   >>> lists
+   [[3], [3], [3]]
+   ```
+
+   What has happened is that `[[]]` is a one-element list containing an empty list, so all three elements of `[[]] * 3` are references to this single empty list. Modifying any of the elements of `lists` modifies this single list. You can create a list of different lists this way:
+
+   ```
+   >>> lists = [[] for i in range(3)]
+   >>> lists[0].append(3)
+   >>> lists[1].append(5)
+   >>> lists[2].append(7)
+   >>> lists
+   [[3], [5], [7]]
+   ```
+
+   Further explanation is available in the FAQ entry [How do I create a multidimensional list?](https://docs.python.org/3/faq/programming.html#faq-multidimensional-list).
+
+3. If *i* or *j* is negative, the index is relative to the end of sequence *s*: `len(s) + i` or `len(s) + j` is substituted. But note that `-0` is still `0`.
+
+4. The slice of *s* from *i* to *j* is defined as the sequence of items with index *k* such that `i <= k < j`. If *i* or *j* is greater than `len(s)`, use `len(s)`. If *i* is omitted or `None`, use `0`. If *j* is omitted or `None`, use `len(s)`. If *i* is greater than or equal to *j*, the slice is empty.
+
+5. The slice of *s* from *i* to *j* with step *k* is defined as the sequence of items with index `x = i + n*k` such that `0 <= n < (j-i)/k`. In other words, the indices are `i`, `i+k`, `i+2*k`, `i+3*k` and so on, stopping when *j* is reached (but never including *j*). When *k* is positive, *i* and *j* are reduced to `len(s)` if they are greater. When *k* is negative, *i* and *j* are reduced to `len(s) -1` if they are greater. If *i* or *j* are omitted or `None`, they become “end” values (which end depends on the sign of *k*). Note, *k*cannot be zero.  If *k* is `None`, it is treated like `1`.
+
+6. Concatenating immutable sequences always results in a new object. This means that building up a sequence by repeated concatenation will have a quadratic runtime cost in the total sequence length. To get a linear runtime cost, you must switch to one of the alternatives below:
+
+   - if concatenating [`str`](https://docs.python.org/3/library/stdtypes.html#str) objects, you can build a list and use [`str.join()`](https://docs.python.org/3/library/stdtypes.html#str.join) at the end or else write to an [`io.StringIO`](https://docs.python.org/3/library/io.html#io.StringIO)instance and retrieve its value when complete
+   - if concatenating [`bytes`](https://docs.python.org/3/library/functions.html#bytes) objects, you can similarly use [`bytes.join()`](https://docs.python.org/3/library/stdtypes.html#bytes.join) or [`io.BytesIO`](https://docs.python.org/3/library/io.html#io.BytesIO), or you can do in-place concatenation with a [`bytearray`](https://docs.python.org/3/library/functions.html#bytearray) object. [`bytearray`](https://docs.python.org/3/library/functions.html#bytearray) objects are mutable and have an efficient overallocation mechanism
+   - if concatenating [`tuple`](https://docs.python.org/3/library/stdtypes.html#tuple) objects, extend a [`list`](https://docs.python.org/3/library/stdtypes.html#list) instead
+   - for other types, investigate the relevant class documentation
+
+7. Some sequence types (such as [`range`](https://docs.python.org/3/library/stdtypes.html#range)) only support item sequences that follow specific patterns, and hence don’t support sequence concatenation or repetition.
+
+8. `index` raises [`ValueError`](https://docs.python.org/3/library/exceptions.html#ValueError) when *x* is not found in *s*. When supported, the additional arguments to the index method allow efficient searching of subsections of the sequence. Passing the extra arguments is roughly equivalent to using `s[i:j].index(x)`, only without copying any data and with the returned index being relative to the start of the sequence rather than the start of the slice.
+
+
+
+#### Immutable Sequence Types
+
+The only operation that immutable sequence types generally implement that is not also implemented by mutable sequence types is support for the [`hash()`](https://docs.python.org/3/library/functions.html#hash) built-in.
+
+This support allows immutable sequences, such as [`tuple`](https://docs.python.org/3/library/stdtypes.html#tuple) instances, to be used as [`dict`](https://docs.python.org/3/library/stdtypes.html#dict) keys and stored in [`set`](https://docs.python.org/3/library/stdtypes.html#set) and [`frozenset`](https://docs.python.org/3/library/stdtypes.html#frozenset) instances.
+
+Attempting to hash an immutable sequence that contains unhashable values will result in [`TypeError`](https://docs.python.org/3/library/exceptions.html#TypeError).
+
+
+
+#### Mutable Sequence Types
+
+The operations in the following table are defined on mutable sequence types. The [`collections.abc.MutableSequence`](https://docs.python.org/3/library/collections.abc.html#collections.abc.MutableSequence) ABC is provided to make it easier to correctly implement these operations on custom sequence types.
+
+In the table *s* is an instance of a mutable sequence type, *t* is any iterable object and *x* is an arbitrary object that meets any type and value restrictions imposed by *s* (for example, [`bytearray`](https://docs.python.org/3/library/functions.html#bytearray) only accepts integers that meet the value restriction `0 <= x <=255`).
+
+| Operation                 | Result                                   | Notes |
+| ------------------------- | ---------------------------------------- | ----- |
+| `s[i] = x`                | item *i* of *s* is replaced by *x*       |       |
+| `s[i:j] = t`              | slice of *s* from *i* to *j* is replaced by the contents of the iterable *t* |       |
+| `del s[i:j]`              | same as `s[i:j] = []`                    |       |
+| `s[i:j:k] = t`            | the elements of `s[i:j:k]` are replaced by those of *t* | (1)   |
+| `del s[i:j:k]`            | removes the elements of `s[i:j:k]` from the list |       |
+| `s.append(x)`             | appends *x* to the end of the sequence (same as`s[len(s):len(s)] = [x]`) |       |
+| `s.clear()`               | removes all items from `s` (same as `del s[:]`) | (5)   |
+| `s.copy()`                | creates a shallow copy of `s` (same as `s[:]`) | (5)   |
+| `s.extend(t)` or `s += t` | extends *s* with the contents of *t* (for the most part the same as `s[len(s):len(s)] = t`) |       |
+| `s *= n`                  | updates *s* with its contents repeated *n* times | (6)   |
+| `s.insert(i, x)`          | inserts *x* into *s* at the index given by *i* (same as `s[i:i] = [x]`) |       |
+| `s.pop([i])`              | retrieves the item at *i* and also removes it from *s* | (2)   |
+| `s.remove(x)`             | remove the first item from *s* where `s[i] == x` | (3)   |
+| `s.reverse()`             | reverses the items of *s* in place       | (4)   |
+
+Notes:
+
+1. *t* must have the same length as the slice it is replacing.
+
+2. The optional argument *i* defaults to `-1`, so that by default the last item is removed and returned.
+
+3. `remove` raises [`ValueError`](https://docs.python.org/3/library/exceptions.html#ValueError) when *x* is not found in *s*.
+
+4. The `reverse()` method modifies the sequence in place for economy of space when reversing a large sequence. To remind users that it operates by side effect, it does not return the reversed sequence.
+
+5. `clear()` and `copy()` are included for consistency with the interfaces of mutable containers that don’t support slicing operations (such as [`dict`](https://docs.python.org/3/library/stdtypes.html#dict) and [`set`](https://docs.python.org/3/library/stdtypes.html#set))
+
+   New in version 3.3: `clear()` and `copy()` methods.
+
+6. The value *n* is an integer, or an object implementing [`__index__()`](https://docs.python.org/3/reference/datamodel.html#object.__index__). Zero and negative values of *n* clear the sequence. Items in the sequence are not copied; they are referenced multiple times, as explained for `s * n` under [Common Sequence Operations](https://docs.python.org/3/library/stdtypes.html#typesseq-common).
 
 
 
@@ -682,36 +974,6 @@ python 中多行注释使用三个单引号(''')或三个双引号(""")。
 - 说明你想要在程序中克服的问题，等等。
 
 [*代码会告诉你怎么做，注释会告诉你为何如此。*](http://www.codinghorror.com/blog/2006/12/code-tells-you-how-comments-tell-you-why.html)
-
-
-
-
-
-
-
-## 保留字符
-
-下面的列表显示了在Python中的保留字。这些保留字不能用作常数或变数，或任何其他标识符名称。
-
-所有Python的关键字只包含小写字母。
-
-| and      | exec    | not    |
-| -------- | ------- | ------ |
-| assert   | finally | or     |
-| break    | for     | pass   |
-| class    | from    | print  |
-| continue | global  | raise  |
-| def      | if      | return |
-| del      | import  | try    |
-| elif     | in      | while  |
-| else     | is      | with   |
-| except   | lambda  | yield  |
-
-
-
-
-
-
 
 
 
@@ -1047,6 +1309,10 @@ objects have a type (e.g., integer, list) and may be mutable or not. Names (a.k.
 
 
 ## 保留字 / reserved words
+
+下面的列表显示了在Python中的保留字。这些保留字不能用作常数或变数，或任何其他标识符名称。
+
+所有Python的关键字只包含小写字母。
 
 ```
 Python 3.X reserved words
