--- a/Python/Python Study Notes/12. if while for.md
+++ b/Python/Python Study Notes/12. if while for.md
@@ -140,15 +140,31 @@ Python’s Boolean operators are a bit different from their counterparts in lang
 The `if` statement takes action on truth values, but Boolean operators are used to combine the results of other tests in richer ways to produce new truth values. there are three Boolean expression operators in Python:
 
 ```
-X and Y 
-# Is true if both X and Y are true 
-
 X or Y
 # Is true if either X or Y is true
+
+X and Y 
+# Is true if both X and Y are true 
 
 not X
 # Is true if X is false (the expression returns True or False)
 ```
+
+These are the Boolean operations, ordered by ascending priority:
+
+| Operation | Result                                   | Notes |
+| --------- | ---------------------------------------- | ----- |
+| `x or y`  | if *x* is false, then *y*, else *x*      | (1)   |
+| `x and y` | if *x* is false, then *x*, else *y*      | (2)   |
+| `not x`   | if *x* is false, then `True`, else `False` | (3)   |
+
+Notes:
+
+1. This is a short-circuit operator, so it only evaluates the second argument if the first one is false.
+2. This is a short-circuit operator, so it only evaluates the second argument if the first one is true.
+3. `not` has a lower priority than non-Boolean operators, so `not a == b` is interpreted as `not (a == b)`, and `a == not b` is a syntax error.
+
+
 
 X and Y may be any truth value, or any expression that returns a truth value (e.g., an equality test, range comparison, and so on).Boolean operators are typed out as words in Python (instead of C’s &&, ||, and !).
 
