--- a/Python/Python Study Notes/16. Functions 函数.md
+++ b/Python/Python Study Notes/16. Functions 函数.md
@@ -1902,6 +1902,37 @@ In general though, you should strive to minimize external dependencies in functi
 
 
 
+### Recursive Functions
+
+#### Summation with Recursion
+
+Here’s what a custom summing function might look like when coded with recursion:
+
+```
+>>> def mysum(L):
+...		print(L)							# Trace recursive levels
+...     if not L:							# L shorter at each level
+...         return 0
+...     else:
+...         return L[0] + mysum(L[1:]) 		# Call myself recursively
+... 
+>>> mysum([1, 2, 0, 3, 4, 5])
+[1, 2, 0, 3, 4, 5]
+[2, 0, 3, 4, 5]
+[0, 3, 4, 5]
+[3, 4, 5]
+[4, 5]
+[5]
+[]
+15
+```
+
+
+
+
+
+
+
 ## 抽象
 
 计算数列的和，比如：`1 + 2 + 3 + ... + 100`，写起来十分不方便，于是数学家发明了求和符号∑，可以把 `1 + 2 + 3 + ... + 100` 记作：
